# PhD-Projekt

./: .gitattributes  .gitignore  CLAUDE.md  README.md  claudeignore
Web/: .coverage  .gitignore  CLAUDE.md  index.html  jsconfig.json  package-lock.json  package.json  players.html  pyproject.toml  vite.config.js
Web/.claude/: settings.local.json
Web/Backend/: .coverage  .env  .env.test  app.py  cleanup.py  config.py  db_conn.py  db_session.py  requirements.txt  server.py
Web/Backend/data/: aoi_definitions.json  stimuli_definitions.json
Web/Backend/db/: avatar_visibility_repository.py  eyetracking_repository.py  handover_repository.py  participant_repository.py  stimuli_repository.py  trial_repository.py
Web/Backend/models/: __init__.py  analysis.py  avatar_visibility.py  experiment.py  eyetracking.py  handover.py  participant.py  questionnaire.py  stimulus.py  trial.py
Web/Backend/routes/: __init__.py  analysis.py  avatar_visibility.py  experiment.py  eyetracking.py  handover_routes.py  participant.py  participant_status.py  questionnaire.py  stimuli.py  study.py  trials.py
Web/Backend/scripts/: import_aoi.py  import_avatar_visibility.py  import_experiment.py  import_eye_tracking.py  import_handover.py  import_participant.py  import_questionnaire.py  import_questionnaire_response.py  import_stimuli.py  import_stimulus_type.py  import_study.py  import_study_config.py  import_study_questionnaire.py  import_study_stimuli.py  import_trial.py  import_trial_participant_slot.py  import_trial_slot.py  import_trial_slot_stimulus.py  manage_imports.py
Web/Backend/services/: avatar_visibility_service.py  connection_service.py  experiment_service.py  eyetracking_service.py  handover_service.py  participant_service.py  participant_submission_service.py  questionnaire_response_service.py  questionnaire_service.py  stimuli_service.py  study_service.py  trial_service.py
Web/Backend/tests/: conftest.py  test_analysis.py  test_correlation.py  (+21 more)
Web/mock/: experimentConfig.json  handoverMock.json  participantMock.json
Web/src/: App.jsx  AppRouter.jsx  index.css  main.jsx
(+726 files in other folders)
