[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "httpx==0.28.1",
    "openpyxl>=3.1.5",
    "pandas==2.3.3",
    "pingouin>=0.6.0",
    "psycopg2==2.9.11",
    "pytest>=9.0.0",
    "pytest-cov==7.0.0",
    "pytest-env==1.2.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "scipy==1.16.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "weasyprint>=68.1",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/data/*",
    "*/mock/*",
    "*/public/*",
    "*/models/*",
    "*/config.py",
    "*/__init__.py"
]
branch = true

[tool.pytest.ini_options]
addopts = "--cov=Backend --cov-report=html --cov-report=term"
pythonpath = ["."]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
